[tool.poetry]
name = "astro-tigger-lsm"
version = "1.8.0"
description = "Python libraries and command-line tools for manipulating Tigger LSMs"
authors = ["Oleg Smirnov <osmirnov@gmail.com>"]
readme = "README.rst"
packages = [
    {include = "Tigger"},
]


[tool.poetry.dependencies]
python = "^3.9"
astro-kittens = "^1.4.6"
numpy = "*"
scipy = "*"
astropy = ">=6"
future = "*"
python-casacore = "*"
meqtrees-cattery = "^1.7.9"

[tool.poetry.scripts]
tigger-convert = "Tigger.bin.tigger_convert:main"
tigger-tag = "Tigger.bin.tigger_tag:main"
tigger-restore = "Tigger.bin.tigger_restore:main"
tigger-make-brick = "Tigger.bin.tigger_make_brick:main"


[tool.poetry.group.tests]
optional = true
[tool.poetry.group.tests.dependencies]
pytest = "^7.1.3"
flake8 = "*"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
